--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://getbootstrap.com/docs-assets/ico/favicon.png">
 
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>MacLeod Broad's Web Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
@@ -38,14 +38,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index_files/index.html">Project name</a>
+          <a class="navbar-brand" href="./index_files/index.html">MacLeod Broad's Web Page</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="./index_files/index.html">Home</a></li>
             <li><a href="http://getbootstrap.com/examples/navbar-fixed-top/#about">About</a></li>
             <li><a href="http://getbootstrap.com/examples/navbar-fixed-top/#contact">Contact</a></li>
-            <li class="dropdown">
+            <!-- <li class="dropdown">
               <a href="./index_files/index.html" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="./index_files/index.html">Action</a></li>
@@ -54,15 +54,15 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
                 <li><a href="./index_files/index.html">Separated link</a></li>
-                <li><a href="./index_files/index.html">One more separated link</a></li>
+                <li><a href="./index_files/index.html">One more separated link</a></li> -->
               </ul>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://getbootstrap.com/examples/navbar/">Default</a></li>
+<!--             <li><a href="http://getbootstrap.com/examples/navbar/">Default</a></li>
             <li><a href="http://getbootstrap.com/examples/navbar-static-top/">Static top</a></li>
             <li class="active"><a href="http://getbootstrap.com/examples/navbar-fixed-top/">Fixed top</a></li>
-          </ul>
+ -->          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -71,9 +71,9 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
+        <h1>Welcome</h1>
+        <p>This is mocked up quickly, because I am bored.</p>
+        <p>Navbar will follow you as you scroll..</p>
         <p>
           <a class="btn btn-lg btn-primary" href="http://getbootstrap.com/components/#navbar" role="button">View navbar docs »</a>
         </p>
