Update with local links instead of remote.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index_files/index.html">MacLeod Broad's Web Page</a>
+          <a class="navbar-brand" href="./index.html">MacLeod Broad's Web Page</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="./index_files/index.html">Home</a></li>
-            <li><a href="http://getbootstrap.com/examples/navbar-fixed-top/#about">About</a></li>
-            <li><a href="http://getbootstrap.com/examples/navbar-fixed-top/#contact">Contact</a></li>
+            <li><a href="./index.html#about">About</a></li>
+            <li><a href="./index.html#contact">Contact</a></li>
             <!-- <li class="dropdown">
               <a href="./index_files/index.html" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -75,7 +75,7 @@
         <p>This is mocked up quickly, because I am bored.</p>
         <p>Navbar will follow you as you scroll..</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="http://getbootstrap.com/components/#navbar" role="button">View navbar docs »</a>
+          <a class="btn btn-lg btn-primary" href="./index.html#navbar" role="button">View More »</a>
         </p>
       </div>
 
