--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index_files/index.html">Home</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./index.html#about">About</a></li>
             <li><a href="./index.html#contact">Contact</a></li>
             <!-- <li class="dropdown">
